fix align issue

--- a/front-end/src/css/HouseCodeForm.css
+++ b/front-end/src/css/HouseCodeForm.css
@@ -1,3 +1,7 @@
+.houseCodePromptContainer {
+    text-align: center;
+}
+
 .houseCodePrompt {
     margin: 0;
     padding: 0;
